tests/purs/failing/PrimSubModuleReserved.purs
-- @shouldFailWith CannotDefinePrimModules
module Main where

import Prim.Foobar
